--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "data-binding-demo",
-  "private": true,
-  "description": "Welcome to your TiDev Titanium Mobile Project",
+  "name": "colors",
   "version": "1.0.0",
+  "description": "Welcome to your Appcelerator Titanium Mobile Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "eslint": "^8.50.0",
+    "eslint-config-axway": "^8.0.0",
+    "eslint-plugin-alloy": "^1.2.1",
+    "tailwindcss": "^3.3.3"
   }
 }
